tests/negative/typecheck/index_slice.orng
// index_slice.orng:8:7: error: expected a value of type `&Int`, got a value of type `&Bool`
//     y[1]
//      ^
// 
fn main() -> Int {
    let x = [true, false, true]
    let y: []Bool = &x
    y[1]
}